[gd_scene load_steps=16 format=3 uid="uid://2wjwj5sxn4my"]

[ext_resource type="Texture2D" uid="uid://i84n8rbbx8xm" path="res://assets/animated-tiles.png" id="1_6hw88"]
[ext_resource type="Script" uid="uid://cs6lfkxu7k3ui" path="res://scripts/bola_de_fuego_script.gd" id="1_k2vlo"]
[ext_resource type="AudioStream" uid="uid://clpd3nfqdmi81" path="res://sonidos/8bits-fx-buble(cut).wav" id="3_tsqw1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k2vlo"]
atlas = ExtResource("1_6hw88")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsqw1"]
atlas = ExtResource("1_6hw88")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pvl3"]
atlas = ExtResource("1_6hw88")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76wbg"]
atlas = ExtResource("1_6hw88")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk302"]
atlas = ExtResource("1_6hw88")
region = Rect2(128, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aleud"]
atlas = ExtResource("1_6hw88")
region = Rect2(160, 288, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yap7a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2vlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsqw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pvl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76wbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk302")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aleud")
}],
"loop": true,
"name": &"anim_bola_fuego",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6hw88"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tsqw1"]
radius = 6.08276

[sub_resource type="Animation" id="Animation_6pvl3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tsqw1"]
resource_name = "anim_destruccion"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.256478, 0.285945)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_76wbg"]
_data = {
&"RESET": SubResource("Animation_6pvl3"),
&"anim_destruccion": SubResource("Animation_tsqw1")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_k2vlo")
metadata/_edit_group_ = true

[node name="hechizo_body_2D" type="CharacterBody2D" parent="."]
collision_layer = 4
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="hechizo_body_2D"]
sprite_frames = SubResource("SpriteFrames_yap7a")
animation = &"anim_bola_fuego"
frame_progress = 0.467837

[node name="colsion_entorno" type="CollisionShape2D" parent="hechizo_body_2D"]
shape = SubResource("CircleShape2D_6hw88")

[node name="Area2D" type="Area2D" parent="hechizo_body_2D"]
collision_layer = 0
collision_mask = 8

[node name="colision_golpe" type="CollisionShape2D" parent="hechizo_body_2D/Area2D"]
shape = SubResource("CircleShape2D_tsqw1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../hechizo_body_2D")
libraries = {
&"": SubResource("AnimationLibrary_76wbg")
}

[node name="fx_8bit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tsqw1")
volume_db = -15.0

[connection signal="body_entered" from="hechizo_body_2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
